--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,8 @@
 # Authors
 
-Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
-
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+Ashish Kulkarni:
+  name        : "Ashish Kulkari"
+  uri         : "http://ashishkulkarnii.github.io"
+  email       : "ashish2002kulkarni@gmail.com"
+  bio         : "Software Developer at Nasdaq. Computer Science Bachelor from PES University."
+  avatar      : "profile.png"
