--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,17 +8,17 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/
+  - title: "Articles"
+    url: /articles/
 
   - title: "Teaching"
     url: /teaching/
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Projects"
+    url: /projects/
     
   - title: "Blog Posts"
-    url: /year-archive/
+    url: /blog/
     
   - title: "CV"
     url: /cv/
