--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
 main:
   - title: "Publications"
     url: /publications/
-    
+
   - title: "Projects"
     url: /projects/
 
@@ -18,4 +18,4 @@ main:
     url: /articles/
 
   - title: "CV"
-    url: /cv/
+    url: /files/resume.pdf
