update banner pic

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,4 +5,4 @@ Ashish Kulkarni:
   uri         : "http://ashishkulkarnii.github.io"
   email       : "ashish2002kulkarni@gmail.com"
   bio         : "Software Developer at Nasdaq. Computer Science Bachelor from PES University."
-  avatar      : "me-on-nasdaq-tower.png"
+  avatar      : "profile.png"
