update profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ashishkulkarnii/ashishkulkarnii.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "me.png"
+  avatar           : "me.jpeg"
   name             : "Ashish Kulkarni"  # sidebar name
   pronouns         : # example: "she/her"
   bio              : "SDE at Nasdaq, Bachelor's degree in CS from PES University"
