update bio add employer URL

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ author:
   bio              : "SDE, Bachelor's in CS from PES University"
   location         : "Bengaluru, India"
   employer         : "Nasdaq" # Employer name
+  employer_url     : # Employer URL
   uri              : # URL
   email            : "ashish2002kulkarni@gmail.com"
 
