--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "SDE, Bachelor's in CS from PES University"
   location         : "Bengaluru, India"
   employer         : "Nasdaq"  # Employer name
-  employer_url     : "https://www.nasdaq.com/about/careers/bangalore"  # Employer URL
+  employer_url     : "https://www.nasdaq.com/"  # Employer URL
   uri              : # URL
   email            : "ashish2002kulkarni@gmail.com"
 
