--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Ashish Kulkarni"  # sidebar name
   pronouns         : # example: "she/her"
   bio              : "MS in CS at UC Riverside, ex-SDE at Nasdaq."
-  location         : "Riverside, CA". # Bengaluru, India
+  location         : "Riverside, CA" # Bengaluru, India
   employer         : "University of California, Riverside"  # Employer name
   employer_url     : #"https://www.nasdaq.com/"  # Employer URL
   uri              : # URL
